fixes guide menu layout issues from merge

--- a/docs/theme/static/styles/_shared_layout.less
+++ b/docs/theme/static/styles/_shared_layout.less
@@ -81,12 +81,12 @@ body:not(.donejs):not(.Guides) {
 		left: ~"calc( ( 100% - " @containerWidth ~" ) / 2 )";
 		width: 250px;
 		background-color: @logoColor;
-    @media(max-width:@screen-xs){
-      width:100%;
-      position:relative;
-      left:0;
-      top:0;
-    }
+    // @media(max-width:@screen-xs){
+    //   width:100%;
+    //   position:relative;
+    //   left:0;
+    //   top:0;
+    // }
 
 		ol {
 			margin: 0px;
